--- a/style.css
+++ b/style.css
@@ -153,3 +153,25 @@ main form a{
     font-size: 15px;
 }
 
+.BodyLogin{
+    background-image: url(fondologin.jpeg);
+}
+.BodyRegistro{
+    background-image: url(registro2.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.MainRegistroTop{
+    margin-top: -6%;
+    padding: 1%;
+}
+
+.MainRegistroTop form button{
+    width: 20%;
+    font-size: 20px;
+}
+
+.MainRegistroTop form textarea{
+    margin-top: 1%;
+}
